--- a/css/styles.css
+++ b/css/styles.css
@@ -11185,3 +11185,54 @@ footer a:hover, footer a:active, footer a:focus {
     transform: translateX(-50%) scale(0.95);
   }
 }
+
+
+.device[data-device=iPhone16][data-orientation=portrait][data-color=white] {
+  padding-bottom: 214.28%; /* 基于iPhone16 6.7英寸（2796x1290）计算 */
+  position: relative;
+  
+}
+
+.device[data-device=iPhone16][data-orientation=portrait][data-color=white]::after {
+  content: "";
+  background-image: url("../assets/img/iPhone\ 16\ -\ White\ -\ Portrait.png");
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 104%;
+  height: 100%;
+  z-index: 1;
+  
+}
+/* 屏幕元素样式 这里可以调整视频的显示比例*/
+.device[data-device=iPhone16][data-orientation=portrait][data-color=white] .screen {
+  top: 3%;
+  left: 7.0%;
+  width: 92.5%;
+  height: 94%;
+  z-index: 0;
+}
+/* 视频元素样式 */
+.device[data-device=iPhone16] video {
+  width: 100%;    
+  height: 100%;   
+  object-fit: cover; /* 保持比例裁剪填充 */
+  transform: scale(1.0); /* 放大5%补偿边框遮挡 */
+  transform-origin: center center; /* 缩放中心定位 */  
+  border-radius: 28px; /* 匹配设备圆角 */
+}
+
+/* 屏幕容器样式 */
+.device[data-device=iPhone16] .screen {
+  overflow: hidden;    /* 隐藏视频溢出部分 */
+  border-radius: 28px; /* 匹配设备圆角 */
+}
+
+/* 新增视频适配样式 */
+.device video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 25px;
+}
